--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,18 @@
     "dev": "tsc-watch --onSuccess \"node dist/index.js\""
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "prisma": "^5.21.1",
     "tsc-watch": "^6.2.0",
     "typescript": "^5.6.3"
+  },
+  "dependencies": {
+    "@apollo/server": "^4.11.0",
+    "@prisma/client": "^5.21.1",
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "graphql": "^16.9.0"
   }
 }
