--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@nextui-org/navbar": "^2.0.37",
     "@nextui-org/react": "^2.4.8",
     "@nextui-org/system": "^2.2.6",
+    "@nextui-org/tabs": "^2.0.37",
     "@nextui-org/theme": "^2.2.11",
     "@tabler/icons-react": "^3.19.0",
     "@tanstack/react-query": "^5.59.15",
@@ -28,6 +29,7 @@
     "lucide-react": "^0.453.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.1",
     "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
